# your-money-left-the-chat

./: .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md  database.db  diesel.toml  makefile  smithery.yaml
src/: main.rs
src/application/use_cases/: bitcoin_flow.rs  cash_flow.rs  debt_radar.rs  mod.rs  spending_scanner.rs  tax_simulator.rs
src/config/: mod.rs
src/domain/entities/: bitcoin_ledger.rs  debt_ledger.rs  mod.rs  monthly_spending.rs  my_ledger.rs  tax_deductions_list.rs
src/domain/repositories/: bitcoin_flow.rs  cash_flow.rs  debt_radar.rs  mod.rs  spending_scanner.rs  tax_simulator.rs
src/domain/value_objects/: bitcoin_flow.rs  cash_flow.rs  debt_radar.rs  mod.rs  spending_scanner.rs  tax_simulator.rs
src/infrastructure/: mod.rs
src/infrastructure/database/: mod.rs  schema.rs
src/infrastructure/database/migrations/2025-04-10-183341_init/: down.sql  up.sql
src/infrastructure/database/migrations/2025-04-14-191148_add_tax_deductions_list/: down.sql  up.sql
src/infrastructure/database/migrations/2025-04-14-205603_add_monthly_spending/: down.sql  up.sql
src/infrastructure/database/migrations/2025-10-16-220153_remove_bitcoin_and_debt_ledgers/: down.sql  up.sql
src/infrastructure/database/repositories/: bitcoin_flow.rs  cash_flow.rs  debt_radar.rs  mod.rs  spending_scanner.rs  tax_simulator.rs
src/infrastructure/mcp_handler/: cash_flow.rs  mod.rs
